Bug #1, Improve readability of JuxtaLearn Quiz radar-chart embeds
* Bug #5, Accessibility - simplify headings
* Bug #3, Simple embed - reduce margins, heading font-size, embed space

--- a/custom-functions/css/simple-embed.css
+++ b/custom-functions/css/simple-embed.css
@@ -72,6 +72,13 @@ html body.simple-embed .site {
 
   Quiz score visualizations.
 */
+#jlq-score h2 {
+  font-size: 1.4em;
+  margin: .3em 0;
+}
+#jlq-score p, #jlq-score ul {
+  margin: 0 0 1.2em; /*0 0 1.7..rem*/
+}
 #jlq-score table th {
   font-size: 1.2em;
   min-width: 7em;
